--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 feast==0.31.1
-numpy==1.24.3
+numpy>=1.24.0,<2.0.0
 pandas>=1.4.3,<2.0.0
 dask==2023.3.0  # Version that works with pandas < 2.0.0
 pyarrow>=11.0.0,<12.0.0  # Latest version compatible with feast 0.31.1
@@ -10,14 +10,18 @@ pydantic>=1.8.0,<2.0.0
 SQLAlchemy>=1.4.0,<2.0.0
 
 # For model training and evaluation
-scikit-learn>=1.0.2
-joblib>=1.1.0
-matplotlib>=3.5.1
-seaborn>=0.11.2
-jupyter>=1.0.0  # For any notebook-based analysis
+scikit-learn>=1.0.2,<1.4.0
+joblib>=1.3.0,<1.4.0
+matplotlib>=3.5.1,<4.0.0
+seaborn>=0.11.2,<0.13.0
+jupyter>=1.0.0,<2.0.0  # For any notebook-based analysis
 
 # Model registry and tracking
-mlflow>=2.3.0
+mlflow>=2.3.0,<3.0.0
 gitpython>=3.1.30  # Required for MLflow model registry
-docker>=6.0.0  # Required for MLflow model serving
-python-dotenv>=0.21.0  # For managing environment variables
+docker>=6.0.0,<7.0.0  # Required for MLflow model serving
+python-dotenv>=1.0.0,<2.0.0  # For managing environment variables
+
+# Dashboard dependencies
+streamlit>=1.32.0,<2.0.0
+plotly>=5.18.0,<6.0.0
